Use Spotless instead of Google format