@@ -14,12 +14,11 @@ import com.azure.autorest.extension.base.plugin.JavaSettings;
 import com.azure.autorest.extension.base.plugin.NewPlugin;
 import com.azure.autorest.extension.base.plugin.PluginLogger;
 import com.azure.autorest.partialupdate.util.PartialUpdateHandler;
-import com.google.googlejavaformat.java.Formatter;
 import org.slf4j.Logger;
 
 import java.io.File;
 import java.io.IOException;
-import java.io.InputStream;
+import java.io.UncheckedIOException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -32,8 +31,6 @@ import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.CompletionException;
-import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
@@ -59,7 +56,7 @@ public class Postprocessor extends NewPlugin {
             String readmePath = getReadme();
             if (readmePath != null) {
                 logger.info("README found at: {}", readmePath);
-                readme = new String(Files.readAllBytes(Paths.get(new URI(readmePath))));
+                readme = Files.readString(Paths.get(new URI(readmePath)));
             }
         } catch (IOException | URISyntaxException | IllegalArgumentException e) {
             logger.warn("Location of README is not valid", e);
@@ -139,38 +136,66 @@ public class Postprocessor extends NewPlugin {
         return true;
     }
 
-    private void writeToFiles(Map<String, String> fileContents) {
+    private void writeToFiles(Map<String, String> javaFiles) {
         JavaSettings settings = JavaSettings.getInstance();
         if (settings.isHandlePartialUpdate()) {
-            handlePartialUpdate(fileContents);
+            handlePartialUpdate(javaFiles);
         }
 
-        //Step 4: Print to files
-        Map<String, String> formattedFiles = new ConcurrentHashMap<>();
-        Formatter formatter = new Formatter();
+        if (!settings.isSkipFormatting()) {
+            try {
+                Path tmpDir = Files.createTempDirectory("spotless");
+                tmpDir.toFile().deleteOnExit();
 
-        // Formatting Java source files can be expensive but can be run in parallel.
-        // Submit each file for formatting as a task on the common ForkJoinPool and then wait until all tasks
-        // complete.
-        fileContents.entrySet().parallelStream().forEach(javaFile -> {
-            String formattedSource = javaFile.getValue();
-            if (javaFile.getKey().endsWith(".java")) {
-                if (!settings.isSkipFormatting()) {
-                    try {
-                        formattedSource = formatter.formatSourceAndFixImports(formattedSource);
-                    } catch (Exception e) {
-                        logger.error("Unable to format output file " + javaFile.getKey(), e);
-                        throw new CompletionException(e);
-                    }
+                for (Map.Entry<String, String> javaFile : javaFiles.entrySet()) {
+                    Path file = tmpDir.resolve(javaFile.getKey());
+                    Files.createDirectories(file.getParent());
+                    Files.writeString(file, javaFile.getValue()).toFile().deleteOnExit();
                 }
+
+                Path pomPath = tmpDir.resolve("pom.xml");
+                Files.copy(Postprocessor.class.getResourceAsStream("/readme/pom.xml"), pomPath);
+                pomPath.toFile().deleteOnExit();
+                Files.copy(Postprocessor.class.getResourceAsStream("/readme/eclipse-format-azure-sdk-for-java.xml"),
+                        pomPath.resolveSibling("eclipse-format-azure-sdk-for-java.xml"));
+                pomPath.resolveSibling("eclipse-format-azure-sdk-for-java.xml").toFile().deleteOnExit();
+
+                attemptMavenSpotless(pomPath, logger);
+
+                for (Map.Entry<String, String> javaFile : javaFiles.entrySet()) {
+                    Path file = tmpDir.resolve(javaFile.getKey());
+                    writeFile(javaFile.getKey(), Files.readString(file), null);
+                }
+            } catch (IOException ex) {
+                throw new UncheckedIOException(ex);
             }
+        } else {
+            javaFiles.forEach((fileName, content) -> writeFile(fileName, content, null));
+        }
+    }
 
-            formattedFiles.put(javaFile.getKey(), formattedSource);
-        });
+    private static void attemptMavenSpotless(Path pomPath, Logger logger) {
+        String[] command = Utils.isWindows()
+                ? new String[] { "cmd", "/c", "mvn", "spotless:apply", "-Dspotless", "-f", pomPath.toString() }
+                : new String[] { "sh", "-c", "mvn", "spotless:apply", "-Dspotless", "-f", pomPath.toString() };
 
-        // Then for each formatted file write the file. This is done synchronously as there is potential race
-        // conditions that can lead to deadlocking.
-        formattedFiles.forEach((filePath, formattedSource) -> writeFile(filePath, formattedSource, null));
+        try {
+            File outputFile = Files.createTempFile(pomPath.getParent(), "spotless", ".log").toFile();
+            outputFile.deleteOnExit();
+            Process process = new ProcessBuilder(command)
+                    .redirectErrorStream(true)
+                    .redirectOutput(ProcessBuilder.Redirect.to(outputFile))
+                    .start();
+            process.waitFor(60, TimeUnit.SECONDS);
+
+            if (process.isAlive() || process.exitValue() != 0) {
+                process.destroyForcibly();
+                throw new RuntimeException("Spotless failed to complete within 60 seconds or failed with an error code. "
+                        + Files.readString(outputFile.toPath()));
+            }
+        } catch (IOException | InterruptedException ex) {
+            logger.warn("Failed to run Spotless on generated code.");
+        }
     }
 
     private String getReadme() {
@@ -213,7 +238,7 @@ public class Postprocessor extends NewPlugin {
             }
         }
         try {
-            String code = new String(Files.readAllBytes(customizationFile), StandardCharsets.UTF_8);
+            String code = Files.readString(customizationFile);
             return loadCustomizationClass(customizationFile.getFileName().toString().replace(".java", ""), filePath, code, logger);
         } catch (IOException e) {
             logger.error("Cannot read customization from base directory " + baseDirectory + " and file " + customizationFile);
@@ -230,9 +255,7 @@ public class Postprocessor extends NewPlugin {
         try {
             tempDirWithPrefix = Files.createTempDirectory("temp");
             editor = new Editor(new HashMap<>(), tempDirWithPrefix);
-            InputStream pomStream = Postprocessor.class.getResourceAsStream("/readme/pom.xml");
-            byte[] buffer = new byte[pomStream.available()];
-            pomStream.read(buffer);
+            byte[] buffer = Postprocessor.class.getResourceAsStream("/readme/pom.xml").readAllBytes();
             editor.addFile("pom.xml", new String(buffer, StandardCharsets.UTF_8));
             attemptMavenInstall(Paths.get(tempDirWithPrefix.toString(), "pom.xml"), logger);
             editor.addFile(fileName.substring(fileName.indexOf("src/")), code);
@@ -240,7 +263,7 @@ public class Postprocessor extends NewPlugin {
             throw new RuntimeException(e);
         }
 
-        int javaVersion = getJavaVersion(logger);
+        int javaVersion = Runtime.version().feature();
         if (javaVersion != -1 && javaVersion < 11) {
             throw new IllegalStateException("Java version was '" + javaVersion + "', code customizations require "
                 + "Java 11+ to be used. Please update your environment to Java 11+, preferably Java 17, and run "
@@ -290,7 +313,7 @@ public class Postprocessor extends NewPlugin {
                 // check if existingFile exists, if not, no need to handle partial update
                 if (Files.exists(existingFilePath)) {
                     try {
-                        String existingFileContent = new String(Files.readAllBytes(existingFilePath), StandardCharsets.UTF_8);
+                        String existingFileContent = Files.readString(existingFilePath);
                         return PartialUpdateHandler.handlePartialUpdateForFile(generatedFileContent, existingFileContent);
                     } catch (Exception e) {
                         logger.error("Unable to get content from file path", e);
@@ -304,12 +327,9 @@ public class Postprocessor extends NewPlugin {
     }
 
     private static void attemptMavenInstall(Path pomPath, Logger logger) {
-        String[] command;
-        if (Utils.isWindows()) {
-            command = new String[] { "cmd", "/c", "mvn", "clean", "install", "-f", pomPath.toString() };
-        } else {
-            command = new String[] { "sh", "-c", "mvn", "clean", "install", "-f", pomPath.toString() };
-        }
+        String[] command = Utils.isWindows()
+                ? new String[] { "cmd", "/c", "mvn", "clean", "install", "-f", pomPath.toString() }
+                : new String[] { "sh", "-c", "mvn", "clean", "install", "-f", pomPath.toString() };
 
         // Attempt to install the POM file. This will ensure that the Eclipse language server will have all
         // necessary dependencies to run.
@@ -323,52 +343,5 @@ public class Postprocessor extends NewPlugin {
 
     private void clear() {
         JavaSettings.clear();
-    }
-
-    private static int getJavaVersion(Logger logger) {
-        // java.version format:
-        // 8 and lower: 1.7, 1.8.0
-        // 9 and above: 12, 14.1.1
-        String version = System.getProperty("java.version");
-        if (version == null || version.isEmpty()) {
-            logger.info("Unable to determine Java version to verify if Java 11+ is being used, which is the "
-                + "requirement to run Autorest code customizations.");
-            return -1;
-        }
-
-        if (version.startsWith("1.")) {
-            if (version.length() < 3) {
-                logger.info("Unable to parse Java version to verify if Java 11+ is being used, which is the "
-                    + "requirement to run Autorest code customizations. Version was: " + version);
-                return -1;
-            }
-
-            try {
-                return Integer.parseInt(version.substring(2, 3));
-            } catch (NumberFormatException t) {
-                logger.info("Unable to parse Java version to verify if Java 11+ is being used, which is the "
-                    + "requirement to run Autorest code customizations. Version was: " + version);
-                return -1;
-            }
-        } else {
-            int idx = version.indexOf(".");
-
-            if (idx == -1) {
-                try {
-                    return Integer.parseInt(version);
-                } catch (NumberFormatException ex) {
-                    logger.info("Unable to parse Java version to verify if Java 11+ is being used, which is the "
-                        + "requirement to run Autorest code customizations. Version was: " + version);
-                    return -1;
-                }
-            }
-            try {
-                return Integer.parseInt(version.substring(0, idx));
-            } catch (NumberFormatException t) {
-                logger.info("Unable to parse Java version to verify if Java 11+ is being used, which is the "
-                    + "requirement to run Autorest code customizations. Version was: " + version);
-                return -1;
-            }
-        }
     }
 }
